# dingtalk-sdk-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yaml
dingtalk-cli/: Cargo.toml  README.md
dingtalk-sdk/: Cargo.toml
dingtalk-sdk/src/: lib.rs  msg.rs
examples/: async_enterprise_contacts.rs  async_webhook.rs  blocking_enterprise_contacts.rs  blocking_webhook.rs
src/: auth.rs  error.rs  lib.rs  retry.rs  signature.rs
src/api/: async_enterprise.rs  async_webhook.rs  blocking_enterprise.rs  blocking_webhook.rs  mod.rs
src/client/: async_client.rs  blocking_client.rs  mod.rs  shared.rs
src/transport/: mod.rs
src/types/: enterprise.rs  internal.rs  mod.rs  webhook.rs
src/util/: redact.rs  url.rs
tests/: client_async.rs  client_blocking.rs  http_mock_async.rs  http_mock_blocking.rs  public_types.rs
