[package]
name = "dingtalk-sdk"
description = "Dingtalk SDK for Rust."
version = "1.0.4"
rust-version = "1.93.0"
edition = "2024"
license = "MIT"
authors = ["lvillis<lvillis@outlook.com>"]
categories = ["api-bindings", "network-programming"]
keywords = ["dingtalk", "sdk", "api", "webhook"]
homepage = "https://github.com/lvillis/dingtalk-sdk-rust"
repository = "https://github.com/lvillis/dingtalk-sdk-rust"
documentation = "https://docs.rs/dingtalk-sdk"
readme = "README.md"
include = [
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "src/**",
  "examples/**",
  "tests/**"
]

[features]
default = ["async", "async-tls-rustls-ring"]
async = []
blocking = []

async-tls-rustls-ring = ["reqx/async-tls-rustls-ring"]
async-tls-rustls-aws-lc-rs = ["reqx/async-tls-rustls-aws-lc-rs"]
async-tls-native = ["reqx/async-tls-native"]

blocking-tls-rustls-ring = ["reqx/blocking-tls-rustls-ring"]
blocking-tls-rustls-aws-lc-rs = ["reqx/blocking-tls-rustls-aws-lc-rs"]
blocking-tls-native = ["reqx/blocking-tls-native"]

[dependencies]
reqx = { version = "0.1.13", default-features = false }
urlencoding = { version = "2.1.3", default-features = false }
url = { version = "2.5.7", default-features = false }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = { version = "2.0.11" }
base64 = { version = "0.22.1" }
hmac = { version = "0.12.1" }
sha2 = { version = "0.10.8" }

[dev-dependencies]
tokio = { version = "1.43.0", default-features = false, features = ["macros", "rt-multi-thread"] }

[[example]]
name = "async_webhook"
required-features = ["async"]

[[example]]
name = "async_enterprise_contacts"
required-features = ["async"]

[[example]]
name = "blocking_webhook"
required-features = ["blocking"]

[[example]]
name = "blocking_enterprise_contacts"
required-features = ["blocking"]

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[package.metadata.release]
push = true
publish = false
verify = true
sign-commit = true
sign-tag = true
allow-branch = ["main"]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}" ]

[package.metadata.docs.rs]
no-default-features = true
features = ["async", "async-tls-rustls-ring"]
rustdoc-args = ["--cfg", "docsrs"]
