[package]
name = "dingtalk-cli"
description = "CLI tools for dingtalk."
version = "0.1.0"
rust-version = "1.81.0"
edition = "2021"
license = "MIT"
authors = ["lvillis<lvillis@outlook.com>"]
categories = ["command-line-utilities", "command-line-interface", "network-programming", "api-bindings"]
keywords = ["dingtalk", "sdk", "api", "cli", "rust"]
homepage = "https://github.com/lvillis/dingtalk-sdk-rust"
repository = "https://github.com/lvillis/dingtalk-sdk-rust"
documentation = "https://docs.rs/dingtalk-cli"
readme = "README.md"

[[bin]]
name = "dingtalk"
path = "src/main.rs"

[dependencies]
dingtalk-sdk = { version = "1.0.0", default-features = false }
clap = { version = "4.5.16", default-features = false, features = ["std", "debug"] }
