[package]
name = "dingtalk-sdk"
description = "Dingtalk SDK for Rust."
version = "1.0.3"
rust-version = "1.85.0"
edition = "2024"
license = "MIT"
authors = ["lvillis<lvillis@outlook.com>"]
categories = ["api-bindings", "network-programming"]
keywords = ["dingtalk", "sdk", "api", "webhook"]
homepage = "https://github.com/lvillis/dingtalk-sdk-rust"
repository = "https://github.com/lvillis/dingtalk-sdk-rust"
documentation = "https://github.com/lvillis/dingtalk-sdk-rust"
readme = "../README.md"
exclude = [
    "/docs/",
    "/tests/",
    "/.config/",
    "/.github/",
    "/.justfile",
    "/rust-toolchain.toml",
    "/.gitignore",
]

[dependencies]
reqwest = { version = "0.13.1", default-features = false, features = ["json", "rustls-tls"] }
urlencoding = { version = "2.1.3", default-features = false }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = { version = "2.0.11" }
base64 = "0.22.1"
hmac = "0.12.1"
sha2 = "0.10.8"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }
